compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_function_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn doStuff() {}"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:1
  │
1 │ fn doStuff() {}
  │ ^^^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: do_stuff
